Don't show ephy-about: in the UI

https://bugzilla.gnome.org/show_bug.cgi?id=720876